<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.frannyzhao.mqttlib.ui.TestFragment"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_server"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/et_server"
            android:hint="@string/default_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_txt_bg"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_port"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/et_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/edit_txt_bg"
            android:hint="@string/default_port" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="UserName:"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"/>
        <EditText
            android:id="@+id/et_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/edit_txt_bg"
            android:hint="admin" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/edit_txt_bg"
            android:hint="password" />
    </LinearLayout>
    <TextView
        android:id="@+id/btn_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_connect"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:background="@drawable/button"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_topic"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/et_topic"
            android:hint="@string/default_topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_txt_bg"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:id="@+id/btn_subscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_txt_subscribe"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:background="@drawable/button"
            android:layout_marginLeft="20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_msg"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/et_message"
            android:hint="@string/default_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_txt_bg"
            android:layout_marginLeft="10dp" />
        <TextView
            android:id="@+id/btn_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_txt_publish"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:background="@drawable/button"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/btn_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/btn_txt_disconnect"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:background="@drawable/button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/txt_status"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:id="@+id/txt_console"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="..."
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:background="@color/grey"/>

</LinearLayout>
